# sdr-j-sw

./: README  README.DABSTICK  README.SDRPLAY  README.md  README.servers  mirics-server.tgz  sdrplay-server.tgz
configurator/: CMakeLists.txt  Makefile  configurator.cpp  configurator.h  configurator.ui  configure-sw.pro  main.cpp  ui_configurator.h
swreceiver/: CMakeLists.txt  Makefile  README  sdr-j-swradio-71.pro  sdr-j-swradio-72.pro
swreceiver/includes/: gui.h  hf-processor.h-obsolete  swradio-constants.h
swreceiver/includes/filters/: fft-filters.h  fir-filters.h  iir-filters.h  notch-filters.h
swreceiver/includes/output/: pa-writer.h
swreceiver/includes/scopes-qwt6/: fft-scope.h  hf-scope.h  iqdisplay.h  scope.h  spectrogramdata.h
swreceiver/includes/various/: agchandler.h  attenuator.h  decoderloader.h  deviceloader.h  dumper.h  fft.h  iir-basics.h  newconverter.h  oscillator.h  resampler.h  s-meter.h  sincos.h  utilities.h
swreceiver/plugins/: ui_sdrgui.h
swreceiver/plugins/decoders/: cleanup-decoders  create-decoders-linux  create-decoders-windows  decoder-interface.h  decoder_widget.ui
swreceiver/plugins/decoders/amtor-decoder/: CMakeLists.txt  Makefile  amtor-decoder.cpp  amtor-decoder.h  amtor-decoder.pro  main.cpp  ui_widget.h  widget.ui
swreceiver/plugins/decoders/analog-decoder/: CMakeLists.txt  Makefile  analog-decoder.cpp  analog-decoder.h  analog-decoder.pro  decoders.h  main.cpp  squelchClass.h  ui_widget.h  widget.ui
swreceiver/plugins/decoders/cw-decoder/: CMakeLists.txt  Makefile  cw-decoder.cpp  cw-decoder.h  cw-decoder.pro  main.cpp  ui_widget.h  widget.ui
swreceiver/plugins/decoders/decoder-utils/: filter.h  goertzel-filter.h  interleave.h  pllC.cpp  pllC.h  slidingfft.h  viterbi.cpp  viterbi.h
swreceiver/plugins/decoders/domino-decoder/: CMakeLists.txt  Makefile  domino-decoder.cpp  domino-decoder.h  domino-decoder.pro  main.cpp  object_script.dominodecoder.Release  object_script.dominodecoderd.Debug  ui_widget.h  widget.ui
swreceiver/plugins/decoders/drm-decoder/: Makefile  basics.cpp  basics.h  drm-decoder.cpp  drm-decoder.h  drm-decoder.pro  frame-processor.cpp  frame-processor.h  local-scope.cpp  object_script.drmdecoder.Release  object_script.drmdecoderd.Debug  ofdm-processor.cpp  ofdm-processor.h  ui_widget.h  widget.ui
swreceiver/plugins/decoders/drm-decoder-1/: basics.cpp  basics.h  drm-decoder.pro  frame-processor.cpp  gettimeOffset.h  ofdm-processor.cpp  widget.ui
swreceiver/plugins/decoders/drm-decoder-2/: drm-decoder.h  drm-decoder.pro  frame-processor.h  gettimeOffset.cpp  local-scope.cpp  local-scope.h  main.cpp  ofdm-processor.h  widget.ui
swreceiver/plugins/decoders/fax-decoder/: CMakeLists.txt  Makefile  fax-decoder.cpp  fax-decoder.h  fax-decoder.pro  fax-demodulator.cpp  fax-demodulator.h  fax-filenames.h  fax-image.h  fax-scroller.h  object_script.faxdecoder.Release  object_script.faxdecoderd.Debug  ui_widget.h  widget.ui
swreceiver/plugins/decoders/hell-decoder/: CMakeLists.txt  Makefile  hell-decoder.cpp  hell-decoder.h  hell-decoder.pro  main.cpp  ui_widget.h  widget.ui
swreceiver/plugins/decoders/mfsk-decoder/: CMakeLists.txt  Makefile  main.cpp  mfsk-decoder.cpp  mfsk-decoder.h  mfsk-decoder.pro  object_script.mfskdecoder.Release  object_script.mfskdecoderd.Debug  ui_widget.h  widget.ui
swreceiver/plugins/decoders/no-decoder/: CMakeLists.txt  Makefile  main.cpp  no-decoder.cpp  no-decoder.h  no-decoder.pro  ui_widget.h  widget.ui
swreceiver/plugins/decoders/olivia-decoder/: CMakeLists.txt  Makefile  main.cpp  olivia-decoder.cpp  olivia-decoder.h  olivia-decoder.pro  pj_mfsk.h  ui_widget.h  widget.ui
swreceiver/plugins/decoders/psk-decoder/: Makefile  main.cpp  psk-decoder.cpp  psk-decoder.h  psk-decoder.pro  ui_widget.h  widget.ui
swreceiver/plugins/decoders/rtty-decoder/: CMakeLists.txt  Makefile  main.cpp  rtty-decoder.cpp  rtty-decoder.h  rtty-decoder.pro  ui_widget.h  widget.ui
swreceiver/plugins/decoders/sstv-decoder-een/: snr-calc.cpp  snr-calc.h  sstv-decoder.cpp  sstv-decoder.h  sstv-decoder.pro  sstv-filters.cpp  sstv-filters.h  sstv-worker.cpp  sstv-worker.h  widget.ui
swreceiver/plugins/decoders/sstv-decoder-xxx/: getvis.cpp  main.cpp  sdft.h  sstv-buffer.cpp  sstv-buffer.h  sstv-decoder.cpp  sstv-decoder.h  sstv-decoder.pro  sstv-modespec.cpp  sstv-worker.cpp  sstv-worker.h  widget.ui
swreceiver/plugins/decoders/throb-decoder/: CMakeLists.txt  Makefile  main.cpp  object_script.throbdecoder.Release  object_script.throbdecoderd.Debug  throb-decoder.cpp  throb-decoder.h  throb-decoder.pro  throb.cpp  throb.h  throbTables.h  ui_widget.h  widget.ui
swreceiver/plugins/input/: cleanup  create-for-linux  create-for-windows  echointerface.h  extio-handler.tgz  no-rig.cpp  no-rig.h  pa-reader.cpp  pa-reader.h  rig-interface.cpp  rig-interface.h  sw-elad-s1.tgz
swreceiver/plugins/input/cardreader/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  cardreader.cpp  cardreader.h  cardreader.pro  widget.ui
swreceiver/plugins/input/dabstick/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  dabstick.cpp  dabstick.h  dabstick.pro  widget.ui
swreceiver/plugins/input/elektor/: CMakeLists.txt  Makefile  band.cpp  band.h  elektor.cpp  elektor.h  elektor.pro  frequencytables.cpp  frequencytables.h  widget.ui
swreceiver/plugins/input/extio/: Makefile  (+7 more)
swreceiver/plugins/input/extio-handler/: Makefile  card-reader.h  common-readers.h  extio-handler.cpp  extio-handler.h  extio-handler.pro  reader-base.h  ui_extio-widget.h  xx
swreceiver/src/: .newmodules.swp  gui.cpp  hf-processor.cpp-obsolete  main.cpp  newmodules  sdrgui.ui  ui_sdrgui.h
swreceiver/src/filters/: fft-filters.cpp  fir-filters.cpp  iir-filters.cpp  notch-filters.cpp
swreceiver/src/output/: pa-writer.cpp
swreceiver/src/scopes-qwt6/: fft-scope.cpp  hf-scope.cpp  iqdisplay.cpp  scope.cpp
swreceiver/src/various/: agchandler.cpp  attenuator.cpp  decoderloader.cpp  device-handler.cpp  deviceloader.cpp  fft.cpp  iir-basics.cpp  oscillator.cpp  resampler.cpp  s-meter.cpp  sincos.cpp  utilities.cpp
(+199 files in other folders)
